objects/LH__Lookup_Helper_Filter_Group__c.object
<CustomObject>
    <fields>
        <fullName>LH__Child_Object__c</fullName>
        <label>Child Object</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LH__Dupe_Test__c</fullName>
        <formula>&apos; &apos; + &apos;- test&apos;</formula>
        <label>Dupe Record Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LH__Filter_Logic__c</fullName>
        <label>Filter Logic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LH__Test_Formula__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test_Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LH__Test_Lookup__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This lookup field is used for testing purposes.</description>
        <label>Created By ID</label>
        <referenceTo>LH__Lookup_Helper_Filter__c</referenceTo>
        <relationshipLabel>Test Children</relationshipLabel>
        <relationshipName>TestRelationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LH__Test_Text_Field__c</fullName>
        <label>Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lookup Helper Filter Group</label>
    <nameField>
        <displayFormat>FG-{00000000}</displayFormat>
        <label>Lookup Helper Filter Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lookup Helper Filter Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>